--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -11,6 +11,83 @@ html, body {
     background-color:  #e9e9e9;
 }   
 
+header {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 20px;
+    background-color: white;
+}
+
+#faixa-do-header {
+    background-color: #007bff;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+}
+
+.header-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo img {
+    height: 60px; 
+}
+
+#barra-de-pesquisa {
+    display: flex;
+    cursor: pointer;
+}
+
+#barra-de-pesquisa img {
+    height: 20px; 
+    margin-right: 10px;
+}
+
+#barra-de-pesquisa input {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+/* navbar = barra de navegação*/
+.navbar-container {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 10px;
+}
+
+.navbar ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.navbar ul li {
+    margin: 0 10px;
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    color: black;
+    padding: 10px 15px;
+    border-radius: 4px;
+}
+
+.navbar ul li a:hover, 
+.navbar ul li a:focus {
+    background-color: #f1f1f1;
+}
+
+.navbar ul li a[href=".html"] {
+    background-color: #007bff;
+    color: white;
+}
 
 /* Estilos para padronizacao de blocos de conteúdo dos paragrafos */
 .padronizacao {
@@ -101,6 +178,86 @@ html, body {
     color: #007bff; /* Cor azul */
 }
 
-.hightlight {
-    background-color: yellow;
+
+/* rodapé = footer */
+footer {
+    background-color: #007bff;  
+    width: 100%;
+    position: relative;
+    color: white;
+    overflow: hidden;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px 20px;
+    width: 100%;
+    height: 100%;
+}
+
+#qrcode {
+    height: 120px;
+    width: 120px;
+}
+
+#bandeira {
+    height: 80px;
+    width: auto;
+    margin-bottom: 10px;
+}
+
+.elementsfooter {
+    display: flex;
+    margin-bottom: 5px;
+    font-size: 90px;
+}
+
+.elementsfooter a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+}
+
+.elementsfooter img {
+    margin-right: 10px;
+    height: 30px; 
+    width: 30px;   
+}
+
+.elementsfooter h3 {
+    margin: 0;
+    font-size: 14px;
+}
+
+#footerfeio {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.middle-section {
+    text-align: center;
+}
+
+.diagonal-line {
+    position: absolute;
+    width: 2px;
+    background-color: rgb(0, 0, 0);
+    height: 100%; 
+}
+
+.diagonal-line.left {
+    top: 0;
+    left: 33.33%;
+    transform: rotate(45deg);
+}
+
+.diagonal-line.right {
+    top: 0;
+    left: 66.66%;
+    transform: rotate(45deg);
 }
